# tayira-game

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  tayira  valgrind-glfw.supp
assets/: assets.json  entities.json  fonts.json  levels.json  maps.json
assets/entities/goblins/: simple-goblin.entity-config.json
assets/entities/player/: player.entity-config.json
assets/images/fonts/: font-yoster-island-12.asset-config.json  font-yoster-island-12.font-config.json  regular-16.asset-config.json  regular-16.font-config.json
assets/images/map/: tiles.asset-config.json
assets/images/maps/: cracked_tiles.asset-config.json  doors_lever_chest_animation.asset-config.json  fire_animation.asset-config.json  objects.asset-config.json  walls_floor.asset-config.json  water_coasts_animation.asset-config.json
assets/images/monsters/goblin/: goblin_attack_full.anim-config.json  goblin_death_full.anim-config.json  (+5 more)
assets/images/player/: sword_attack.anim-config.json  sword_attack.asset-config.json  sword_death.anim-config.json  sword_death.asset-config.json  sword_hurt.anim-config.json  sword_idle.anim-config.json  sword_idle.asset-config.json  sword_run.anim-config.json  sword_run_attack.anim-config.json  sword_run_attack.asset-config.json  sword_walk.anim-config.json  sword_walk.asset-config.json  sword_walk_attack.anim-config.json  sword_walk_attack.asset-config.json  unarmed_death.anim-config.json  unarmed_death.asset-config.json  unarmed_hurt.asset-config.json  unarmed_idle.anim-config.json  unarmed_run.anim-config.json  unarmed_run.asset-config.json  unarmed_walk.anim-config.json
assets/images/ui/: dialog_box.asset-config.json  dialogue_box.asset-config.json
assets/levels/: dungeon.level-config.json
assets/maps/dungeon/: dungeon.map-config.json
assets/shaders/line/: fragment.fs  vertex.vs
assets/shaders/present/: fragment.fs  vertex.vs
assets/shaders/texture/: fragment.fs  fragment.glsl  vertex.glsl  vertex.vs
main/: tayira.c
scripts/: convert_from_fnt.py  convert_from_tiled.py  convert_to_animation.py  convert_to_map.py  convert_to_tileset.py
src/ai/: pathfinding.c  pathfinding.h
src/cjson/: CMakeLists.txt
src/data_structures/: CMakeLists.txt  data_structures.h  hashtable.c  hashtable.h  heap.c  heap.h  linked_list.c  linked_list.h
src/game/: CMakeLists.txt  animation.c  animation.h  asset_manager.c  asset_manager.h  config.h  drawable.c  drawable.h  entity_defs.h  entity_manager.c  entity_manager.h  font.c  font.h  game.c  game.h  level.c  level.h  level_manager.c  level_manager.h  map.c  map.h  rules.c  rules.h
src/game/ai/: CMakeLists.txt  pathfinding.c  pathfinding.h
src/game/ui/: CMakeLists.txt  dialog.c  dialog.h
src/logger/: CMakeLists.txt  logger.c  logger.h
src/renderer/: CMakeLists.txt  assets.c  assets.h  renderer.c  renderer.h  resources.c  resources.h
src/shaders/texture/: fragment.glsl  vertex.glsl
src/utils/: CMakeLists.txt  utils.c  utils.h
src/watchdog/: CMakeLists.txt  watchdog.c  watchdog.h
(+29 files in other folders)
